test/scc/ext/tm/semantic-errors/012.a
012.t:7:8: error: volatile objects cannot be used within _Transaction_safe function